Fix cropper close from comment photo upload

--- a/client/style/custom/images.import.less
+++ b/client/style/custom/images.import.less
@@ -5,7 +5,7 @@
 
   margin-top: 1rem;
 
-  // margin-top: ~"calc(50vh - 50vmin)";
+
 
 
   overflow: hidden;
@@ -16,8 +16,9 @@
     border-bottom: 1px solid RGBA(0, 0, 0, 0.05);
     position: absolute;
     display: block;
-    top: 50%;
-    left: 50%;
-    .translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    // background-color: black;
+    // background-image: url('http://desandro.github.io/imagesloaded/assets/loading.gif');
   }
 }
