--- a/client/style/custom/page.import.less
+++ b/client/style/custom/page.import.less
@@ -200,13 +200,13 @@
         margin-right: 0.25rem;
       }
       .username {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         color: @brand-primary;
         font-weight: bold;
         span {
           color: RGBA(0, 0, 0, 0.7);
           font-weight: normal;
-          font-size: 0.7rem;
+          font-size: 0.9rem;
         }
       }
       .desc {
@@ -219,6 +219,7 @@
         position: relative;
         width: 50vmin;
         height: 50vmin;
+        margin-top: 0.5rem;
         img {
           width: 100%;
           height: 100%;
@@ -268,7 +269,6 @@
     }
     button.comment-photo {
       position: relative;
-
     }
   }
 }
